		* Search results can now be sorted by "knownness" state.

	marcell:
		* Fixed issue #892: Show data sizes >= 1.0 GB with three digits.
		* Fixed search 'Stop' button not stopping Kad searches.
		* Check Kademlia search results against original criteria.
		* Allow Kademlia searches with repetitive keywords.
		* Allow adding current chat partner to friend list from tab's context menu.

	morph:
		* Patch to uniform and fix minor errors on man pages

	myth:
		* Feedback from shared files - add number of clients on queue.

	Skolnick:
		* Fixed autogen.sh for Bourne Shell

	Stu Redman:
		* Sort source list on opening and add file name to A4AF files
		* MSVC: optional GeoIP support
		* Faster progress bars with less overhead (without pens/brushes)
		* Show log messages in remote gui
		* More info in the Kad tab
		* Improved gaplist performance
		* Ported chat captchas (receive and send) 
		  and "Advanced Chat Spam Filter" from eMule
		* Allow download of multiple search results if search list 
		  is sorted by status (thanks to DarkNRG)
		* Fixed CFile::SetLength for large files
		* Reduce file handle usage by closing part files after idle time
		* Speed up selection of shared directories with many subdirectories,
		  fixed red marking of folders with shared subdirectories
		* Ban clients that uploaded bad data (based on CorruptionBlackBox from eMule)
		* Support wxWidgets 2.9
		* amuled for Windows (with wx 2.9)
		* Friends get recognized in the friend list control even if their IP has changed
		* "Last Reception" in remote gui
		* Fixed client information and stopped files in remote gui
		* Don't kick friend upload, don't kick release prio uploads (unless they take more
		  than half of the slots), and don't kick anybody else unless necessary (with GonoszTopi)
		* Fixed crash in remote gui when aMule exits
		* Added more media file types from eMule
		* Allow the user to cancel the app if Temp/Incoming is not found
		* Show downloads as shares in remote gui